Add repository field to package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "description": "An Ajv (Another JSON Schema Validator) middleware for Micro to validate request body, query parameters and etc.",
   "main": "lib/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/igat64/micro-ajv"
+  },
   "scripts": {
     "test": "jest"
   },
