--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,13 +19,13 @@ jobs:
           paths:
             - ./node_modules
   test:
-    - docker:
-        - image: circleci/node:carbon
-    - steps:
-        - checkout
-        - run: # run tests
-            name: test
-            command: npm test
+    docker:
+      - image: circleci/node:carbon
+    steps:
+      - checkout
+      - run: # run tests
+          name: test
+          command: npm test
 workflows:
   version: 2
   build_and_test:
